[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/background.png" type="Texture" id=1]
[ext_resource path="res://scripts/game_controller.gd" type="Script" id=2]

[node name="Game" type="Node2D"]
script = ExtResource( 2 )

[node name="Background" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 1 )

[node name="Button1" type="Button" parent="."]
margin_left = 100.0
margin_top = 300.0
margin_right = 300.0
margin_bottom = 400.0
text = "Bot達o 1"

[node name="Button2" type="Button" parent="."]
margin_left = 700.0
margin_top = 300.0
margin_right = 900.0
margin_bottom = 400.0
text = "Bot達o 2"

[node name="Button3" type="Button" parent="."]
margin_left = 100.0
margin_top = 450.0
margin_right = 300.0
margin_bottom = 550.0
text = "Bot達o 3"

[node name="Button4" type="Button" parent="."]
margin_left = 700.0
margin_top = 450.0
margin_right = 900.0
margin_bottom = 550.0
text = "Bot達o 4"

[connection signal="pressed" from="Button1" to="." method="_on_Button1_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="Button4" to="." method="_on_Button4_pressed"]
